infrastructure-addons/roles/deploy/templates/frontend_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-cluster-ip-service
  namespace: project
spec:
  type: ClusterIP
  selector:
    component: web
  ports:
    - port: 3000
      targetPort: 3000
